# libfsm

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/: State.h  StateMachine.h  StateTransition.h  UserFunction.h
src/: State.cpp  StateMachine.cpp  StateTransition.cpp
